--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,165 @@
-.App {
+.landing-background {
+  z-index: 1;
+  background-color: deepskyblue;
+  height: 100vh;
+}
+
+.landing-register {
+  z-index: 1;
+  background-color: gold;
+  height: 100vh;
+}
+
+.my-1 {
+  margin: 1rem 0;
+}
+
+.form .form-group {
+  margin: 1.2rem 0;
+}
+
+.form .form-danger {
+  display: block;
+  margin-top: 0.3rem;
+  font-weight: bold;
+  color: red;
+}
+
+input {
+  border: none;
+  box-shadow: 5px 3px 10px #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  width: 209px;
+}
+
+small {
+  font-size: 10px;
+}
+
+.login {
+  width: 324px;
+  height: 470px;
+}
+
+.signup {
+  width: 324px;
+  height: 500px;
+}
+
+.card {
+  padding: 6px;
+  position: absolute;
+  top: 70px;
+  left: 500px;
   text-align: center;
+  background-color: aliceblue;
+  border: 1px solid #eee;
+  border-radius: 26px;
+  box-shadow: 5px 3px 10px #ccc;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  font-size: 14px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(4, 4, 4);
+  height: auto;
+  padding: 12px 24px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  box-shadow: 5px 3px 10px #ccc;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.init-button {
+  border: outset;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.init-button:hover {
+  background-color: red;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button:disabled, .init-button:disabled {
+  background: white;
+  color: #ccc;
+  cursor: not-allowed;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-dark {
+  background: #343a40;
+  color: #fff;
+}
+
+.btn-light {
+  background: #f4f4f4;
+  color: #343a40;
+}
+
+.icons-row svg {
+  cursor: pointer;
+  padding-right: 8px;
+}
+
+.alert {
+  padding: 11px;
+  opacity: 0.9;
+  background:  #f4f4f4;;
+  color: #333;
+  z-index: 2;
+  border-radius: 3px;
+  text-align: center;
+}
+
+.alert-success {
+  background: #28a745;
+  color: #fff;
+}
+
+.alert-danger {
+  background: #dc3545;
+  color: #fff;
+}
+
+.header { 
+  padding-left: 10px;
+}
+
+.dash-header{
+  display: flex;
+  justify-content: space-between;
+  font-family: cursive;
+  background-color: #343a40;
+  color: aqua;
+  margin-bottom: 15px;
+}
+
+.dash-header a {
+  color: aqua;
+  font-size: larger;
+  padding-top: 15px;
+  text-decoration: none;
+}
+
+.section-1 {
+  text-align: center;
+}
+
+.icon {
+  border: 1px solid #343a40;
+  border-radius: 3px;
+}
+
+.skills {
+  display: flex;
+}
+
+.skill {
+  padding: 50px;
+  cursor: pointer;
+}
+
+.skill-details {
+  margin: 50px;
 }
